[tool.poetry]
name = "PROJECT_NAME"
version = "0.3.4"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/PROJECT_NAME"
repository = "https://github.com/dawsonbooth/PROJECT_NAME"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.790"
pyclean = "^2.0.0"
pyinstaller = "^4.2"
rope = "^0.18.0"

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
