[tool.poetry]
name = "PROJECT_NAME"
version = "0.3.5"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
homepage = "https://github.com/dawsonbooth/REPO_NAME"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
dustpan = "^0.3.2"
flake8 = "^3.8.4"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.812"
pyinstaller = "^4.2"
rope = "^0.18.0"

[tool.black]
line-length = 119

[tool.dustpan]
remove-empty-directories = true

[tool.isort]
line_length = 119
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
